Simplify CORS configuration - allow all origins